--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.3.60'
+    id 'antlr'
 }
 
 group 'org.ass'
@@ -9,7 +10,13 @@ repositories {
     mavenCentral()
 }
 
+generateGrammarSource {
+    maxHeapSize = "64m"
+    arguments += ["-visitor", "-long-messages"]
+}
+
 dependencies {
+    antlr "org.antlr:antlr4:4.7.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 }
 
