--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ generateGrammarSource {
 dependencies {
     antlr "org.antlr:antlr4:4.7.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    testImplementation "io.kotest:kotest-runner-junit5-jvm:4.0.0-BETA1"
 }
 
 compileKotlin {
@@ -25,4 +27,8 @@ compileKotlin {
 }
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
+}
+
+test {
+    useJUnitPlatform()
 }
