--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,10 @@ generateGrammarSource {
 dependencies {
     antlr "org.antlr:antlr4:4.7.1"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    implementation 'com.squareup:kotlinpoet:1.5.0'
+    
+    //FIXME remove this import
+    implementation "io.ktor:ktor-client-okhttp:1.3.1"
 
     testImplementation "io.kotest:kotest-runner-junit5-jvm:4.0.0-BETA1"
 }
